--- a/app/views/static_pages/espanol.html.erb
+++ b/app/views/static_pages/espanol.html.erb
@@ -1,34 +1,71 @@
 <% @page_title = "Español" %>
 <% @page_description = "New Subject" %>
 
+<div class="pa-header">
+  <div class="overlay">
+    <div class="title-box"><h1>Servicios Legales</h1></div>
+  </div>
+</div>
 
-Servicios Legales
+<div class="main-wrap">
+  <div class="body-content">
+    <div class="s1">
+			<h3 class="open">Noel B. Leonard Attorney, LLC – Proveer servicios legales en Alabama y la Costa del Golfo</h3>
+			<div class="col-md-7">
+				<p>Noel B. Leonard Attorney - Foley, AlabamaNoel B. Leonard Attorney, LLC es un bufete de abogados localizado en Foley, AL, que provee una multitud de servicios legales a nuestros clientes de Alabama y La Costa del Golfo. Nosotros trabajamos principalmente con accidentes de auto y reclamaciones de lesiones personales debidas a accidentes automovilísticos. Sin embargo, nuestra oficina también ayuda a muchos clientes en diversos litigios y juicios. Entendemos las necesidades de nuestros clientes y trataremos su pleito con confianza, honradez, e integridad.</p>
 
+				<p class="pref">Nuestra oficina es capaz de ayudar con cualquier asunto legal que usted o un miembro de la familia tenga. Podemos ayudarle en caso de:</p>
+				<ul>
+					<li>Los accidentes de automóvil y las lesiones debidas a accidentes automovilísticos</li>
+					<li>Compensación al Trabajador</li>
+					<li>Lesiones Personales</li>
+				</ul>
+			</div>
 
-Noel B. Leonard Attorney, LLC – Proveer servicios legales en Alabama y la Costa del Golfo
-Noel B. Leonard Attorney - Foley, AlabamaNoel B. Leonard Attorney, LLC es un bufete de abogados localizado en Foley, AL, que provee una multitud de servicios legales a nuestros clientes de Alabama y La Costa del Golfo. Nosotros trabajamos principalmente con accidentes de auto y reclamaciones de lesiones personales debidas a accidentes automovilísticos. Sin embargo, nuestra oficina también ayuda a muchos clientes en diversos litigios y juicios. Entendemos las necesidades de nuestros clientes y trataremos su pleito con confianza, honradez, e integridad.
-Nuestra oficina es capaz de ayudar con cualquier asunto legal que usted o un miembro de la familia tenga. Podemos ayudarle en caso de:
-	Los accidentes de automóvil y las lesiones debidas a accidentes automovilísticos
-	Compensación al Trabajador
-	Lesiones Personales
-Llámenos ahora para una evaluación gratuita de su caso (251) 943-8638 o llene el Caja Gratis Formulario de Evaluación y nos pondremos en contacto con usted tan pronto como sea posible.
+			<div class="col-md-5">
+				<%= image_tag('espanol_pic1.jpg', class: 'img-responsive bradius', alt: 'Noel B. Leonard, page for Spanish speaking clients') %>
+			</div>
 
-Nuestra especialidad es Accidente de Auto &amp; Lesiones Personales
-Noel B. Leonard ha representado a víctimas de accidentes automovilísticos durante años por Alabama y la Costa del Golfo. Los accidentes automovilísticos por lo general incluyen una multitud de reclamaciones, tales como:
-	Noel B. Leonard Attorney, LLCDaños a la Propiedad – tales como las reclamaciones al vehículo,  casa, o negocio
-	Cobertura de las necesidades médicas- lesiones, tales como traumas de la cabeza, lesiones de la médula espinal, desfiguración, y lesiones del cuello
-	Rehabilitación de Lesiones Personales y Terapia
-	Reclamaciones de Negligencia Grave a los conductores negligentes
-Nuestro bufete asegura que las víctimas de un accidente automovilístico reciban una compensación adecuada por las lesiones personales sufridas durante el accidente, las necesidades médicas y de rehabilitación, así como daños a la propiedad de vehículos, viviendas, y  negocios.  Cuando esté involucrado en un accidente de auto en Alabama necesita una oficina de abogados que está bien informado en las leyes de Alabama, tiene experiencia en los tribunales locales y del circuito, tiene contactos con los profesionales médicos disponibles y la experiencia legal para asegurar que todas las  reclamaciones son perseguidas de acuerdo con las leyes del estado.
+			<div class="col-md-12">
+				<h4 class="open">Llámenos ahora para una evaluación gratuita de su caso (251) 943-8638 o llene el Caja Gratis Formulario de Evaluación y nos pondremos en contacto con usted tan pronto como sea posible.</h4>
+			</div>
+		</div>
 
-NBL está aquí para representarle a usted o a un miembro de la familia. Llámenos ahora,  (251) 943-8638.
-Entendemos que estar en un accidente de automóvil puede ser muy confuso y complicado, especialmente cuando la comunicación puede ser difícil debido a la barrera del idioma. Independientemente, hay medidas que debe tomar.  Sobre todo le recomendamos que busque atención médica adecuada.  Atender a sus necesidades médicas debe ser siempre su primera prioridad, y podemos ayudarle a encontrar  un médico calificado.
-Una vez que sus necesidades médicas se han atendido lo mejor es que se comunique con nosotros tan pronto como sea posible.  Incluso si usted está en el hospital se puede consultar con usted y determinar si usted tiene un pleito de lesiones personales.
-Nuestra oficina le puede asesorar sobre los próximos pasos a tomar para asegurar que sus derechos están protegidos y  su reclamación por lesiones personales se presenta correctamente.
+		<div class="s2">
+			<div class="col-md-3"><%= image_tag('espanol_pic2.jpg', class: 'img-responsive', alt: 'Noel B. Leonard, page for Spanish speaking clients') %></div>
 
-Factores en la presentación de un pleito de accidente automovilístico en Alabama
-Los abogados NBL evaluarán ciertos factores antes de presentar un pleito de accidente de automóvil. Estos factores incluyen: la prueba de negligencia de otros conductores, el alcance de sus lesiones, y daños a la propiedad que ha sufrido.
+			<div class="col-md-9">
+				<h3 class="open">Nuestra especialidad es Accidente de Auto &amp; Lesiones Personales</h3>
+				<p class="pref">Noel B. Leonard ha representado a víctimas de accidentes automovilísticos durante años por Alabama y la Costa del Golfo. Los accidentes automovilísticos por lo general incluyen una multitud de reclamaciones, tales como:</p>
+				<ul class="mix">
+					<li><span>Daños a la Propiedad</span> – tales como las reclamaciones al vehículo,  casa, o negocio</li>
+					<li><span>Cobertura de las necesidades médicas</span>- lesiones, tales como traumas de la cabeza, lesiones de la médula espinal, desfiguración, y lesiones del cuello</li>
+					<li><span>Rehabilitación de Lesiones Personales y Terapia</span></li>
+					<li><span>Reclamaciones de Negligencia Grave</span> a los conductores negligentes</li>
+				</ul>
 
-Desde ese punto se evalúa una cantidad de acuerdo razonable sobre la base de las facturas médicas, dolor y sufrimiento, pérdida de salarios y de las estimaciones de los daños materiales. También se toma en cuenta cómo sus lesiones y los daños afectan su calidad de vida desde el momento del accidente.
-El bufete de abogados Noel B. Leonard tiene experiencia en tratar con compañías de seguros y entiende lo que se necesita para que usted obtenga la compensación completa y justa.
-Llámenos ahora para una evaluación gratuita de su caso (251) 943-8638 o llene nuestro Caja Gratis Formulario de Evaluación y nos pondremos en contacto con usted lo antes posible.
+				<p>Nuestro bufete asegura que las víctimas de un accidente automovilístico reciban una compensación adecuada por las lesiones personales sufridas durante el accidente, las necesidades médicas y de rehabilitación, así como daños a la propiedad de vehículos, viviendas, y  negocios.  Cuando esté involucrado en un accidente de auto en Alabama necesita una oficina de abogados que está bien informado en las leyes de Alabama, tiene experiencia en los tribunales locales y del circuito, tiene contactos con los profesionales médicos disponibles y la experiencia legal para asegurar que todas las  reclamaciones son perseguidas de acuerdo con las leyes del estado.</p>
+				<h4 class="open">NBL está aquí para representarle a usted o a un miembro de la familia. Llámenos ahora,  (251) 943-8638.</h4>
+			</div>
+		</div>
+
+		<div class="s3">
+			<div class="col-md-10 col-md-offset-1">
+				<p>Entendemos que estar en un accidente de automóvil puede ser muy confuso y complicado, especialmente cuando la comunicación puede ser difícil debido a la barrera del idioma. Independientemente, hay medidas que debe tomar.  Sobre todo le recomendamos que busque atención médica adecuada.  Atender a sus necesidades médicas debe ser siempre su primera prioridad, y podemos ayudarle a encontrar  un médico calificado.</p>
+
+				<p>Una vez que sus necesidades médicas se han atendido lo mejor es que se comunique con nosotros tan pronto como sea posible.  Incluso si usted está en el hospital se puede consultar con usted y determinar si usted tiene un pleito de lesiones personales.</p>
+
+				<p>Nuestra oficina le puede asesorar sobre los próximos pasos a tomar para asegurar que sus derechos están protegidos y  su reclamación por lesiones personales se presenta correctamente.</p>
+
+				<h3 class="blue open">Factores en la presentación de un pleito de accidente automovilístico en Alabama</h3>
+
+				<p>Los abogados NBL evaluarán ciertos factores antes de presentar un pleito de accidente de automóvil. Estos factores incluyen: la prueba de negligencia de otros conductores, el alcance de sus lesiones, y daños a la propiedad que ha sufrido.</p>
+
+				<p>Desde ese punto se evalúa una cantidad de acuerdo razonable sobre la base de las facturas médicas, dolor y sufrimiento, pérdida de salarios y de las estimaciones de los daños materiales. También se toma en cuenta cómo sus lesiones y los daños afectan su calidad de vida desde el momento del accidente.</p>
+
+				<p>El bufete de abogados Noel B. Leonard tiene experiencia en tratar con compañías de seguros y entiende lo que se necesita para que usted obtenga la compensación completa y justa.
+				Llámenos ahora para una evaluación gratuita de su caso (251) 943-8638 o llene nuestro Caja Gratis Formulario de Evaluación y nos pondremos en contacto con usted lo antes posible.</p>
+			</div>
+		</div>
+	</div>
+</div>
