--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -128,13 +128,7 @@
 
   <div class="mega-tab">
     <ul class="megamenu-parent menu-zoom hidden-xs">
-      <li class="menu-item"><%= link_to "Home", root_path %></li>
-      <li class="menu-item"><%= link_to "Motorcycle Accidents", motorcycle_accidents_path %></li>
-      <li class="menu-item"><%= link_to "Auto Accidents", auto_accidents_path %></li>
-      <li class="menu-item"><%= link_to "18-Wheeler Accidents", trucker_accidents_path %></li>
-      <li class="menu-item"><%= link_to "About", about_path %></li>
-      <li class="menu-item"><%= link_to "Contact Us", contact_path %></li>
-      <li class="menu-item"><%= link_to "Resources", resources_path %></li>
+      <%= render 'layouts/nav' %>
     </ul>
   </div>
 
