--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,43 +2,27 @@
 <% @page_description = "New Subject" %>
 
 
+<div class="contactpage">
+  <div class="pa-header">
+      <div class="overlay">
+          <div class="title-box">
+              <h1>Contact Us</h1>
+          </div>
+      </div>
+  </div>
 
-Contact Noel B. Leonard today to discuss your personal injury, auto accident, or 18 wheeler accident injury claim for Baldwin, Mobile, or Escambia Counties Alabama.
+  <div class="main-wrap">
+    <div class="body-content">
+      <div class="s1">
+        <div class="col-md-4">
+          <p>Contact Noel B. Leonard today to discuss your personal injury, auto accident, or 18 wheeler accident injury claim for Baldwin, Mobile, or Escambia Counties Alabama.</p>
+        </div>
 
-Name - F L
-
-Email
-
-Phone
-
-I need help with: (checkbox)
-	1. Injury from an Auto Accident
-	2. Injury from an 18-Wheeler Accident
-	3. Personal Injury
-	4. Criminal Defense
-	5. DUI Arrests &amp; Traffic Offenses
-	6. Estate Planning
-	7. Business Law
-	8. Collections
-
-How did you find us? (dropdown)
-	Google Search
-	Referral
-	Social Media
-	Online Directory
-	Other
-
-	Additional Details About Your Case or Services Needed
-
-===============
-1. Date of incident, location (full address)
-2. Date of incident, location (full address)
-3. Date of incident, type of injury (checkbox)
-		Spinal Cord Injury
-		Wrongful Death
-		Slip and Fall
-		Medical Malpractice
-		Dog Bite
-		Assault and/or Battery
-
-5. Date of incident, location (full address)
+				<div class="col-md-8">
+					<div class="siteorigin-widget-tinymce textwidget">
+            <div id="wufoo-zj0erzt178k0t4"><iframe id="wufooFormzj0erzt178k0t4" class="wufoo-form-container" height="821" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://vincidesigns.wufoo.com/embed/zj0erzt178k0t4/def/embedKey=zj0erzt178k0t4277622&amp;entsource=wordpress&amp;referrer=http%3Awuslashwuslashwww.attorney-leonard.comwuslashabout-uswuslash&amp;header=hide"><a href="https://vincidesigns.wufoo.com/forms/zj0erzt178k0t4/" title="html form">Fill out my Wufoo form!</a></iframe></div></div>
+        </div>
+      </div>
+   	</div>
+  </div>
+</div>
