--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -9,7 +9,7 @@ $blue: #0060af;
 // $navy: #062f45;
 $navy:darken($blue, 25%);
 $dk-blue: #022444;
-$br-blue: #00aeff;
+$br-blue: #007ce2;
 $lt-blue: #b2cfe7;
 $tan: #dbd3c7;
 
