--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -67,7 +67,7 @@
 // Breakpoints
 @mixin bp($point) {
     @if $point == tb {
-        @media only screen and (max-width: 1024px) and (min-width: 768px) { @content ; }
+        @media screen and (max-width: 1025px) { @content ; }
     }
 
     @else if $point == md {
