--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -25,6 +25,10 @@
 	.overlay {@include sec-default(); height: 100%; padding-top: 60px; padding-left: 60px; background-color: rgba($black, .6)}
 }
 
+.simple-header {@include sec-default(); background-color: $white; border-bottom: 5px solid $offwhite; padding-top: 20px; padding-left: 50px;
+	h1 { color: $blue; font-weight: bold; }
+}
+
 .main-content {
 	@include sec-default();
 	padding: $fullsec-padding;
@@ -143,7 +147,7 @@
 	}
 }
 
-.about {
+.page {
 	.cst-header {background-image: url(image_path('courtroom.jpg')); background-position: center center; height:300px; position: relative; z-index: 0;
 		&::before {@include before(); background-color: rgba($navy, .8);}
 		h1, h4 {color: $white; @include tshadow($black); }
@@ -296,3 +300,39 @@
 
 .contactpage { @include sec-default(); }
 
+.about {@include sec-bgimage(); background-image: url(image_path('lawyer-ph.jpg'));
+	.cst-header {
+		// background-position: center center; height:300px;position: relative; z-index: 0;
+		// &::before {@include before(); background-color: rgba($navy, .8);}
+		padding: 100px 0;
+		h1, h4 {color: $white; @include tshadow($black); }
+		h1 {font-size: 40px}
+	}
+	.practice-claims { width:25%;display: inline-block;float: left;
+		.practice-boxes-op { width: 100%; float: left; padding:35px 30px 25px; text-align: center; color: $white; background-color: $dk-blue; margin: 0;
+			h4 {font-family: $open; color: $white;}
+			&.bike {background-color: $blue;}
+			&.auto {background-color: #00447c;}
+			i {font-size: 25px; padding: 13px 12px; border:1px solid $white; border-radius: 50%; margin-bottom: 10px;}
+		}
+	}
+
+	.body{width:90%; @include center-block(); background-color: $offwhite;}
+	.s2 {@include sec-default();background-color: $offwhite; margin-bottom: 75px;}
+
+	.blue-sidebar {width: 75%; float: none; padding: 30px; display: inline-block;
+		h4 {font-weight: bold; font-family: $open; text-align: center; font-size: 22px; margin-top: 25px; margin-bottom: 10px;color: darken($blue, 10%); }
+		ul{padding-left: 0px;}
+		li {font-weight: bold; font-size: 16px; margin-top: 15px; display: inline-block; width:49%; }
+		.icon {width: 10%;@include center-block();}
+	}
+
+	.community {@include sec-default(); text-align: center;
+		h4 {color: $blue; font-weight: bold; width: 60%;@include center-block(); margin-bottom: 35px;}}
+	.charity{display: inline-block; width:20%; float: none;}
+
+	.body2 { @include sec-default();@include sec-bgimage(); background-image: url(image_path('courthouse1.jpg')); background-position: bottom center; position: relative; z-index: 0;
+		&::before {@include before(); background-color: rgba($dk-blue, .85);}
+		.s3 { width:90%; @include center-block(); padding: 50px;}
+	}
+}
