about page, centered footer

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -12,6 +12,8 @@ $dk-blue: #022444;
 $br-blue: #007ce2;
 $lt-blue: #b2cfe7;
 $tan: #dbd3c7;
+$silver:#ecf0f1;
+$lgray: #d4d8d8;
 
 $open: 'Open Sans', Arial, sans-serif;
 $cinzel: 'Cinzel', serif;
