--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,17 +1,22 @@
 <% @page_title = "About Us" %>
 <% @page_description = "New Subject" %>
 
+<div class="inside-sec">
 	<div class="cst-header">
 		<div class="inner">
 			<h1>About Noel B. Leonard</h1>
-			<h4 class="open">Providing Excellent Legal Services in Southern Alabama</h4>
-			<h4 class="open">Noel B. Leonard, Attorney LLC is a law firm based in Foley, Alabama.</h4>
-			<!-- <h4 class="open"> We represent clients in Mobile, Baldwin, and Escambia counties for the following types of claims:</h4> -->
+			<div class="title-line"></div>
+			<div class="clearfix"></div>
+			<h3>Attorney, LLC</h3>
+			<div class="text">
 
+				<h4 class="open">"Accidents happen...but finding the right attorney doesn't happen by accident."</h4>
+			 		<p>Noel B. Leonard, Attorney LLC is a law firm committed to providing excellent legal service within the state of Alabama.
+			 		We are located in Foley, and represent clients from <span>Mobile</span>, <span>Baldwin</span>, and <span>Escambia</span> counties.</p>
+			</div>
 		</div>
 	</div>
 
-	<!-- <div class="container"> -->
 		<div class="body">
 			<div class="s2">
 				<div class="practice-claims">
@@ -32,27 +37,37 @@
 				</div>
 
 				<div class="blue-sidebar">
-					<p>Noel's firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.</p>
-					<%=image_tag('scales1.png', class: 'img-responsive icon') %>
-					<h4>What We Can Do For You?</h4>
-					<ul>
-						<li>Provide free telephone and office consultation</li>
-						<li>Accommodate evening and weekend appointments</li>
-						<li>Provide superior representation for all your legal concerns</li>
-						<li>Ensure first-class client service and personalized attention</li>
-						<li>Defend you against claims brought against you</li>
-						<li>Advance your expenses</li>
-						<li>Maximize your recovery</li>
-					</ul>
+					<div class="top">
+						<div class="col-md-5">
+						<p>Noel B. Leonard has years of experience representing clients with a wide range of litigation concerns and legal issues.
+						He understands the intricacies of Alabama law in a way that helps his clients recover rightful damages.</p>
+						</div>
+						<div class="col-md-5">
+						<p>Noel's firm will help you determine your legal options, help file your claim, and make every effort to see that you receive proper compensation for your injuries, and all other damages sustained during the accident.</p>
+						</div>
+						<%=image_tag('scales1.png', class: 'img-responsive icon') %>
+					</div>
+					<div class="bottom"><div class="overlay">
+						<h4>What We Can Do For You?</h4>
+						<ul>
+							<li><i class="fa fa-chevron-circle-right"></i>Provide free telephone and office consultation</li>
+							<li><i class="fa fa-chevron-circle-right"></i>Accommodate evening and weekend appointments</li>
+							<li><i class="fa fa-chevron-circle-right"></i>Provide superior representation for your legal concerns</li>
+							<li><i class="fa fa-chevron-circle-right"></i>Ensure first-class client service and personalized attention</li>
+							<li><i class="fa fa-chevron-circle-right"></i>Defend you against claims brought against you</li>
+							<li><i class="fa fa-chevron-circle-right"></i>Advance your expenses</li>
+							<li><i class="fa fa-chevron-circle-right"></i>Maximize your recovery</li>
+						</ul>
+					</div></div>
 				</div>
 			</div>
 		</div>
-	<!-- </div> -->
+	</div>
 
 	<div class="body2">
 		<div class="s3">
 			<div class="community">
-				<h4 class="open">We are committed to giving back to our local community. We currently support the following charitable organizations.</h4>
+				<h4 class="open">We are committed to giving back to our local community.<br> We currently support the following charitable organizations.</h4>
 				<%=image_tag('vfw-logo.jpg', class: 'img-responsive charity') %>
 				<%=image_tag('mcdonald-house.jpg', class: 'img-responsive charity') %>
 				<%=image_tag('st-judes.jpg', class: 'img-responsive charity') %>
