--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -300,39 +300,58 @@
 
 .contactpage { @include sec-default(); }
 
-.about {@include sec-bgimage(); background-image: url(image_path('lawyer-ph.jpg'));
-	.cst-header {
-		// background-position: center center; height:300px;position: relative; z-index: 0;
-		// &::before {@include before(); background-color: rgba($navy, .8);}
-		padding: 100px 0;
-		h1, h4 {color: $white; @include tshadow($black); }
-		h1 {font-size: 40px}
+.about {
+	.inside-sec {
+		@include sec-default(); @include sec-bgimage(); background-image: url(image_path('attorney-desk.jpg'));position: relative; z-index: 0;
+		&::before {@include before(); height: 70%; background-color: rgba($dark, .8);}
 	}
-	.practice-claims { width:25%;display: inline-block;float: left;
-		.practice-boxes-op { width: 100%; float: left; padding:35px 30px 25px; text-align: center; color: $white; background-color: $dk-blue; margin: 0;
+	.cst-header {
+		width:80%; @include center-block(); padding: 60px 80px;
+		.inner {@include sec-default();margin-bottom: 80px;border: 1px solid $silver; padding: 60px;}
+		h1, h4,p, h3 {color: $white; @include tshadow($black); }
+		h1 {margin-bottom: 0px; }
+		.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($silver, .4); margin-bottom: 10px;}
+		h3{ letter-spacing: 10px;}
+		.text{@include center-block(); width:75%; padding-top:40px;}
+		h4 {font-style: italic;}
+		p {line-height: 1.6em; span {color: $br-blue; font-weight: bold;}}
+	}
+
+	.body{width:85%; @include center-block(); background-color: $offwhite;}
+	.s2 {@include sec-default();background-color: $offwhite; margin-bottom: 75px;}
+
+	.practice-claims { width:22%;display: inline-block;float: left;
+		.practice-boxes-op { width: 100%; float: left; padding:35px 30px 25px; text-align: center; color: $white; background-color: $blue; margin: 0;
 			h4 {font-family: $open; color: $white;}
-			&.bike {background-color: $blue;}
+			&.bike {background-color: $dk-blue;}
 			&.auto {background-color: #00447c;}
 			i {font-size: 25px; padding: 13px 12px; border:1px solid $white; border-radius: 50%; margin-bottom: 10px;}
 		}
 	}
 
-	.body{width:90%; @include center-block(); background-color: $offwhite;}
-	.s2 {@include sec-default();background-color: $offwhite; margin-bottom: 75px;}
-
-	.blue-sidebar {width: 75%; float: none; padding: 30px; display: inline-block;
-		h4 {font-weight: bold; font-family: $open; text-align: center; font-size: 22px; margin-top: 25px; margin-bottom: 10px;color: darken($blue, 10%); }
-		ul{padding-left: 0px;}
-		li {font-weight: bold; font-size: 16px; margin-top: 15px; display: inline-block; width:49%; }
+	.blue-sidebar {width: 78%; float: none; display: inline-block; padding:0;
+		h4 {font-weight: bold; font-family: $open; text-align: center; font-size: 22px; margin-top: 15px; margin-bottom: 25px;color: darken($blue, 10%); }
+		ul{padding-left: 10px;}
+		li { font-family: $open; font-size: 16px; margin-top: 15px; display: inline-block; width:49%;
+				i {margin-right:3px; color: $blue; font-size: 17px;}}
 		.icon {width: 10%;@include center-block();}
+		.top {@include sec-default();padding: 50px; background-color: $white;}
+		.bottom {@include sec-default(); @include sec-bgimage(); background-image: url(image_path('courtroom.jpg')); background-position: center center;
+		 	.overlay{@include sec-default(); background-color: rgba($offwhite, .9); padding: 25px 10px 33px; }
+		 }
 	}
 
 	.community {@include sec-default(); text-align: center;
-		h4 {color: $blue; font-weight: bold; width: 60%;@include center-block(); margin-bottom: 35px;}}
+		h4 {color: $white; font-weight: bold; width: 60%;@include center-block(); margin-bottom: 35px; @include tshadow($dark);}}
 	.charity{display: inline-block; width:20%; float: none;}
 
-	.body2 { @include sec-default();@include sec-bgimage(); background-image: url(image_path('courthouse1.jpg')); background-position: bottom center; position: relative; z-index: 0;
-		&::before {@include before(); background-color: rgba($dk-blue, .85);}
-		.s3 { width:90%; @include center-block(); padding: 50px;}
+	.body2 { @include sec-default();@include sec-bgimage(); background-image: url(image_path('pillars.jpg')); position: relative; z-index: 0; padding: 40px 60px 55px;
+		&::before {@include before(); background-color: rgba($dk-blue, .85); }
+		.s3 { width:90%; @include center-block(); }
 	}
 }
+
+
+
+
+
